--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ button::-moz-focus-inner {
 	min-height: 100vh;
 	width: 100vw;
 	position: relative;
-	background: url('/img/bg.png') no-repeat;
+	background: url('../img/bg.png') no-repeat;
 	background-size: cover;
 }
 
